--- a/Community_Partners.html
+++ b/Community_Partners.html
@@ -20,12 +20,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
     <!-- Custom style: -->
-    <link rel="stylesheet" href="ardmore-house-style.css" type="text/css">
+    <link rel="stylesheet" href="css/ardmore-house-style.css" type="text/css">
 
     <!-- Favicon: -->
     <link rel="icon" 
       type="image/png" 
-      href="AH_icon.png">
+      href="img/AH_icon.png">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,7 +47,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><img src="drawn_logo_trans.png" alt="Ardmore House"/></a>
+            <a class="navbar-brand" href="index.html"><img src="img/drawn_logo_trans.png" alt="Ardmore House"/></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -82,7 +82,7 @@
           In December 2014, ten Welsh Valley students visited Ardmore House to come up with a solution to the residents' trouble with an ill-equipped television and a game storage unit that was very low to the ground and difficult for residents to use. The students designed and built a beautiful and functional two-foot high cabinet on wheels made of maple wood with a mahogany trim, which would support the storage unit making it easily accessible for all of the residents. <br>
           <a href="http://www.lmsd.org/about-lmsd/newsroom/videos/watch.aspx?viewnode=e71125fa73453?iframe=true%22&width=510&height=410">Click here</a> to see a video recap of the Welsh Valley Middle School Technology Student Association service project at Ardmore House.
         </p>
-        <img src="Welsh_valley.JPG" width="600px" margin="10px" alt="Welsh Valley middle schoolers visiting and helping the residents of Ardmore House."/>
+        <img src="img/Welsh_valley.JPG" width="600px" margin="10px" alt="Welsh Valley middle schoolers visiting and helping the residents of Ardmore House."/>
 
         <!-- Club Thrif-T section -->
         <h4>
