--- a/Apply.html
+++ b/Apply.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
     <!-- Custom style: -->
-    <link rel="stylesheet" href="ardmore-house-style.css" type="text/css">
+    <link rel="stylesheet" href="css/ardmore-house-style.css" type="text/css">
 
     <!-- Favicon: -->
     <link rel="icon" 
       type="image/png" 
-      href="AH_icon.png">
+      href="img/AH_icon.png">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -38,7 +38,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="index.html"><img src="drawn_logo_trans.png" alt="Ardmore House"/></a>
+            <a class="navbar-brand" href="index.html"><img src="img/drawn_logo_trans.png" alt="Ardmore House"/></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,7 +69,7 @@
           If you would like to apply to live at Ardmore House, or learn more about living at Ardmore House, please consult the following document:
         </p>
 
-        <p><a class="btn btn-lg btn-primary" href="#" role="button">
+        <p><a class="btn btn-lg btn-primary" href="files/Ardmore_House_Application.pdf" role="button">
           Housing application information
         </a></p>
       </div>
