--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
     <!-- Custom style: -->
-    <link rel="stylesheet" href="ardmore-house-style.css" type="text/css">
+    <link rel="stylesheet" href="css/ardmore-house-style.css" type="text/css">
 
     <!-- Favicon: -->
     <link rel="icon" 
@@ -40,7 +40,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="About_Us.html"><img src="drawn_logo_trans.png" alt="Ardmore House"/></a>
+            <a class="navbar-brand" href="About_Us.html"><img src="img/drawn_logo_trans.png" alt="Ardmore House"/></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -65,7 +65,7 @@
 
         <h2><i>A great place to live!</i></h2>
 
-        <a href="About_Us.html"><img src="ArdmoreHouse_sign.jpg" id="splashImage" width="100%"/></a>
+        <a href="About_Us.html"><img src="img/ArdmoreHouse_sign.jpg" id="splashImage" width="100%"/></a>
       </div>
       <!-- End Page Content -->
 
